--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -38,8 +38,10 @@
 }
 
 .logo {
-  height: 2rem;
+  height: 3rem;
   margin: auto 0;
+  background: white;
+  border-radius: .5rem;
   /*color: var(--pri-color);
   background: white;
   font-family: "Merriweather", "Serif";
@@ -52,9 +54,14 @@
 }
 
 .es__logo {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 70%;
   z-index: 100;
+  margin: auto;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  margin: -35% 0 0 -45%;
 }
 
 .header__menu {
@@ -172,8 +179,10 @@
 
 .footer__logo {
   width: 70%;
-  height: 7rem;
+  height: 3rem;
   margin: 2rem auto;
+  background: white;
+  border-radius: .5rem;
   /*background: white;
   display: grid;
   align-content: center;
@@ -241,7 +250,7 @@
   top: .5rem;
   left: .5rem;
   color: white;
-  background: var(--pri-color);
+  background: var(--pri-2-color);
   padding: .4rem;
   font-family: "Merriweather", "Serif";
   font-weight: 700;
